[tool.poetry]
name = "image-generator"
version = "0.1.0"
description = "Python application for generating images"
authors = ["Tomas <tomas@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
pillow = "^12.2.0"
diffusers = "^0.37.1"
transformers = {extras = ["torch"], version = "^5.6.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
